# scrap-scraper-requester

./: .env.sample  Makefile  README.md  main.py  pyproject.toml
app/: settings.py
app/helpers/: check_url.py  get_amazon_pid.py  user_input.py
app/infra/: rabbitmq.py
